src/components/CPPEScoreView/cppe-score.scss
@import '../../stylesheets/variables';

.right-pane-container {
  margin: 15px;

    h2 {
        color: #0068AD;
        font-size: 28px;
        font-family: Roboto;
        font-weight: $heavy-weight;
        font-style: bold;
        padding: 6px;
    }

    h3 {
        font-size: 22px;
        font-weight: $semi-heavy-weight;
        font-style: bold;
        padding: 6px;
    }

    h4 {
        font-size: 14px;
        font-family: Roboto;
        font-weight: $heavy-weight;
        font-style: bold;
        margin-left: 10px;
        padding: 0px,0px,0px,30px;   
    }

    a{ 
       text-decoration: underline;
       font-size: 14px;
       font-family: Roboto;
    }

    img {
        width: 25px;
        height: 25px;
        padding: 0px 10px 0px 0px;
        flex-direction: row;
      }

    p {
      font-weight: $light-weight;
      padding: 5px 5px 5px 5px;
    }

    p:last-child {
      margin: 0;
    }
        
  }

  .rationale-component
  {
    overview {
        width: auto;
        min-width: 40%;
      }

      p {
        text-align: justify;
      }
  }

.practice-info-component {
    .overview {
      width: auto;
      min-width: 40%;
    }

    p {
      text-align: justify;
    }

    img {
      position:relative; 
      right: 0; 
      display: right;
      width: 200px;
      height: 120px;
      margin-left: 5px;
      flex-direction: row;
    }
  }

.caution-container{

    .row-container{
       display: flex;
       align-items: left;
    }

    h2 { color:black;
        font-size: 22px;
        font-weight: $semi-heavy-weight;
        font-style: bold;
        padding-bottom: 5px;
      } 
    
   img{
        display: left;
        width: 60px;
        height:60px;
        padding: 10px 5px 5px 5px;
        flex-direction: row;
    }
    
    width: 98%;
    font-family: Roboto; 
    font-size: 18px;
    align-content: f;
    font-size: 1.05rem;
    line-height: 2.34375rem;
    margin-bottom: 1.875rem;
    background: #F0F0F0;
    margin-top: 1.5rem;
    margin-left: 7px;
    padding-left: 0.45rem;
    padding-top: 0.45rem;
}

a {
color: #2a83f7;
text-decoration: none;
line-height: normal;
font-size: 16px;
}

a:hover {
    color:rgb(62, 74, 241)
}


.Alert-container-box{
    width: 100%;
    background-color: #f5f5f5 !important;
    margin-bottom: 2.5rem;
}

.container{
    width: 100%;
    background-color: #f7f7f7!important;
    margin-bottom: 2.5rem;
    margin-top: 1.5rem;
    padding-left: 0rem;
    padding-right: 0rem;
}
.dropdown{
    display: flex;
    justify-content: space-between;
    align-items: center;
    // margin-top: 2.5rem;
}
.dropdown-items{
    margin-right: 1rem;
    color:black;
}
.child-container{
    width: 100%;
    background: #ffffff;
}

.conservation-practice-wrapper{
    display: flex;
    height: 600px;
}

.conservation-practices{
    flex-basis: 50%;
    padding-left: 10px;
    overflow: auto;
}

::-webkit-scrollbar {
    width: 10px;
}
::-webkit-scrollbar-track {
    box-shadow: inset 0 0 3px grey;
    border-radius: 2px;
}
::-webkit-scrollbar-thumb {
    background: rgb(174, 173, 173);
    border-radius: 5px;
}
::-webkit-scrollbar-thumb:hover {
    background: rgb(121, 119, 119);
   
}

.title{
    padding-left: 10px;
    font-size: 25px;
    font-weight: 800;
    margin-bottom: 2.5rem;
    margin-top: 1rem;
}

.cppe-effect-value{
    width: 30px;
    background: #236430;
    border-radius:3px; 
    padding: 0px 6px;
    color: white;
    height:25px;
   text-align: center; 
}

.check{
    color: black;
}

.row-click{
    cursor: pointer;
    margin-bottom: -1rem;
}

.clicked-row{
    cursor: pointer;
    border-left: 4px solid rgb(94, 99, 200);
    background-color: #e3dedb;
    margin-bottom: -1rem;
}

.CPPETEXT{
    color: black;
    font-weight: bold;
    margin-top: 10px;
    margin-left: 10px;
}

.green-box{
    width: 40px;
    background: #236430;
    border-radius:3px; 
    padding: 0px 6px;
    color: white;
    height:25px;
    text-align: center;
}

.filter-green-box{
    width: 30px;
    margin-top: 10px;
    background: #236430;
    border-radius:3px; 
    padding: 0px 6px;
    color: white;
    height:25px;
    text-align: center;
}

.red-box{
    width: 40px;
    background: #CD2026;
    border-radius:3px; 
    padding: 0px 6px;
    color: white;
    height:25px;
    text-align: center;
}

.filter-red-box{
    width: 30x;
    margin-top: 10px;
    background: #CD2026;
    border-radius:3px; 
    padding: 0px 6px;
    color: white;
    height:25px;
    text-align: center;
}

.grey-box{
    height: flex;
    width: 36px;
    background: #75716E;
    border-radius:3px; 
    padding: 0px 10px;
    color: white;
}

.filter-grey-box{
    height: 25px;
    width: 26px;
    margin-top: 10px;
    background: #75716E;
    border-radius:3px; 
    padding: 0px 10px;
    color: white;
}

.flexdata{
    display: flex;
    padding: 10px;
    height: 200px;
    height: auto;
}

.practice-name{
    color: blue;
    font-size: 16px;
    font-weight: bolder;
    display: block;
    padding-left: 20px;
    width: 500px;
}

.practice-description{
    display: inline-block;
    padding: 0px 0px 5px 5px;
    font-size: 14px;
    margin-bottom: 0rem;
}

.row{
    display: flex;
    align-items: center;
    margin-bottom: 10px;
}

.checkbox{
    width: 30px;
    margin-left: 150px;
    margin-top: 0px;
    height: 25px;
    
}

.check{
    display: flex;
    justify-content: center;
    margin-left: 0.5rem;
    align-items: center;
}

.checkbox:focus{
    width: 30px;
    margin-left: 150px;
    margin-top: 0px;
    height: 25px;
    outline: none !important;
}

.selectAll{
    width: 30px;
    height: 20px;
    
}

.selectAll:focus{
    width: 30px;
    height: 20px;
    outline: none !important;
}

click-check{
    border: 4px solid rgb(94, 99, 200);
    margin-bottom: 0.1rem;
    height: 22%;
}

.details{
    flex-basis: 50%;
    padding-left: 10px;
    overflow: auto;} 


.export-container{
    background-color: none;
    outline: none;
    border: none;
    box-shadow: none;
}


.filter-container {
    display: flex;
    align-items: center;
    margin-left: $short-space-size;
    // justify-content: space-between;
    // flex-basis: auto;
    // width: 800px;
    // flex-direction: row;
    // padding: 0px 10px 1px 10px;
    // height: 36px;
}

.filter-dropdown{
    // position: relative;
    height: 36px;
    // width: 150px;
    margin-left: $short-space-size;
    // flex-basis: 0;
    // justify-content: space-between;
    // margin-top: 5px;
    // margin-left: 10px;
    // margin-bottom: 10px;
    // overflow: auto;
}

.sort-by-select {
    border: 1px solid $dark-blue;
    border-radius: 4px;
    background-color: $white;
    width: 210px;
    height: 36px;
    color: black;
    padding: 0px 0px 0px 5px;
    font-weight: $heavy-weight;
    font-size: $h4-font-size;
    margin-left: $short-space-size;
}

  .filter-selected-box{
    width: 80px;
    height: 36px;
    background: #dbeefd;
    border-radius:3px; 
    margin-top: 10px;
    margin-left: 5px;
    padding: 5px 1px 1px 5px;
    color: rgb(19, 18, 18);
}

.filters-select {
    display: flex;
    align-items: center;
    width: 100px;
    padding: 0px 0px 0px 0px;
    flex-direction: row;
    margin: $short-space-size;
}

.filters-select-input {
    margin-left: $short-space-size;
}

.clear-all-link {
    margin: $short-space-size;
    cursor: pointer;
}

.flexbox-select {
    display: flex;
    align-items: right;
    width: 450px;
    padding: 0px 0px 0px 0px;
    flex-direction: row;
}

.filter-button-container {
    position: relative;
//     display: flex;
//     flex-direction: column;
//     justify-content: center;
//     align-items: center;
//     border: 1px solid $dark-blue;
//     border-radius: 4px;
//     background-color: $white;
//     // width: 150px;
//     height: 36px;
//     color: $usda-blue;
//     padding: 0px 0px 0px 5px;
//     font-weight: $heavy-weight;
//     font-size: $h4-font-size;
  }

.filter-button-practice {
    border: 1px solid $dark-blue;
    border-radius: 4px;
    background-color: $white;
    width: 210px;
    height: 36px;
    color: black;
    padding: 0px 0px 0px 5px;
    font-weight: $heavy-weight;
    font-size: $h4-font-size;
    margin-left: 250px;
}

  //cppe dropdown
.flexbox-vertical {
    cursor: default;
    position: absolute;
    place-content: end left;
    height: 240px;
    width: 355px;
    background: #ffffff;
    flex-direction: column;
    padding: 1px 1px 1px 5px;
    overflow: auto;
    position: absolute;
    bottom: 0;
    top: 100%;
    z-index: 1;
}
  
  .filter-button {
    cursor: default !important;
    position: absolute;
    // margin: $short-space-size;
    width: 280%;
    border: 1px solid $dark-blue;
    border-radius: 4px;
    background-color: transparent;
    height: 36px;
    color: $usda-blue;
    font-weight: $heavy-weight;
    font-size: $h4-font-size;
    // padding: 0px 5px 0px 5px;

    &:focus {
        outline: 0.25rem solid #2491ff !important;
        outline-offset: 0;
    }
  }

  .filter-button-label {
    cursor: default;
    // position: absolute;
    width: 280%;
    cursor: default;
    // margin: $short-space-size;
    border: 1px solid $dark-blue;
    border-radius: 4px;
    background-color: $white;
    height: 36px;
    color: black;
    font-weight: $heavy-weight;
    font-size: $h4-font-size;
    padding: 0px 0px 0px 5px;
  }

  .apply-button {
    cursor: default;
    margin: $short-space-size;
    border: 1px solid $dark-blue;
    border-radius: 4px;
    background-color: transparent;
    height: 36px;
    color: $usda-blue;
    font-weight: $heavy-weight;
    font-size: $h4-font-size;
    padding: 0px 5px 0px 5px;
  }

  .up-arrow:after {
    display: inline-block;
    content: " ";
    margin-left: 10px;
    margin-bottom: 2px;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-bottom: 5px solid rgb(0, 0, 0);
  }
  
  .down-arrow:after {
    display: inline-block;
    content: " ";
    margin-left: 10px;
    margin-bottom: 2px;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-top: 5px solid black;
  }

  .filter-lable{
    display: 'inline-block';
    margin-top: 5.5rem;
    margin-Left: '1px';
    margin-right: '5px';
    font-Size:'2px'
  }

